--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
         </nav>
         <ul class="mail-tel mess-container list">
           <li class="mail-container">
-            <svg class="mess-icon" width="16" height="12">
-              <use href="./img/icons.svg#icon-envelope"></use>
-            </svg>
-
-            <a href="mailto:info@devstudio.com" class="mail-link link"
-              >info@devstudio.com
+            <a href="mailto:info@devstudio.com" class="mess-link link">
+              <svg class="mess-icon" width="16" height="12">
+                <use href="./img/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
             </a>
           </li>
           <li class="tel-container">
-            <svg class="mess-icon" width="10" height="16">
-              <use href="./img/icons.svg#icon-smartphone"></use>
-            </svg>
-
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="mess-link link">
+              <svg class="mess-icon" width="10" height="16">
+                <use href="./img/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
