--- a/portfolio.html
+++ b/portfolio.html
@@ -37,18 +37,20 @@
         </nav>
         <ul class="mail-tel mess-container list">
           <li class="mail-container">
-            <svg class="mess-icon" width="16" height="12">
-              <use href="./img/icons.svg#icon-envelope"></use>
-            </svg>
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com
+            <a href="mailto:info@devstudio.com" class="mess-link link">
+              <svg class="mess-icon" width="16" height="12">
+                <use href="./img/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
             </a>
           </li>
           <li class="tel-container">
-            <svg class="mess-icon" width="10" height="16">
-              <use href="./img/icons.svg#icon-smartphone"></use>
-            </svg>
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="mess-link link">
+              <svg class="mess-icon" width="10" height="16">
+                <use href="./img/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -79,82 +81,100 @@
           <h2 class="portfolio visually-hidden">Список робот</h2>
           <ul class="portfolio-list list">
             <li class="portfolio-card">
-              <img
-                src="img/img21.jpg"
-                alt="Зображення екрану ноутбука"
-                width="370"
-              />
-              <div class="portfolio-text">
-                <h3 class="portfolio-title">Технокряк</h3>
-                <p class="portfolio-content">Веб-сайт</p>
-              </div>
+              <a href="" class="portfolio-card-link">
+                <img
+                  src="img/img21.jpg"
+                  alt="Зображення екрану ноутбука"
+                  width="370"
+                />
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Технокряк</h3>
+                  <p class="portfolio-content">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-card">
-              <img
-                class="portfolio-img"
-                src="img/img22.jpg"
-                alt="Постер"
-                width="370"
-              />
-              <div class="portfolio-text">
-                <h3 class="portfolio-title">
-                  Постер New Orlean vs Golden Star
-                </h3>
-                <p class="portfolio-content">Дизайн</p>
-              </div>
+              <a href="" class="portfolio-card-link">
+                <img
+                  class="portfolio-img"
+                  src="img/img22.jpg"
+                  alt="Постер"
+                  width="370"
+                />
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">
+                    Постер New Orlean vs Golden Star
+                  </h3>
+                  <p class="portfolio-content">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-card">
-              <img src="img/img23.jpg" alt="Логотип ресторану " width="370" />
-              <div class="portfolio-text">
-                <h3 class="portfolio-title">Ресторан Seafood</h3>
-                <p class="portfolio-content">Додаток</p>
-              </div>
+              <a href="" class="portfolio-card-link">
+                <img src="img/img23.jpg" alt="Логотип ресторану " width="370" />
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Ресторан Seafood</h3>
+                  <p class="portfolio-content">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-card">
-              <img src="img/img24.jpg" alt="Навушники" width="370" />
-              <div class="portfolio-text">
-                <h3 class="portfolio-title">Проєкт Prime</h3>
-                <p class="portfolio-content">Маркетинг</p>
-              </div>
+              <a href="" class="portfolio-card-link">
+                <img src="img/img24.jpg" alt="Навушники" width="370" />
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Проєкт Prime</h3>
+                  <p class="portfolio-content">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-card">
-              <img src="img/img25.jpg" alt="Два бокса" width="370" />
-              <div class="portfolio-text">
-                <h3 class="portfolio-title">Проєкт Boxes</h3>
-                <p class="portfolio-content">Додаток</p>
-              </div>
+              <a href="" class="portfolio-card-link">
+                <img src="img/img25.jpg" alt="Два бокса" width="370" />
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Проєкт Boxes</h3>
+                  <p class="portfolio-content">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-card">
-              <img
-                src="img/img26.jpg"
-                alt="Зображення екрану монітора"
-                width="370"
-              />
-              <div class="portfolio-text">
-                <h3 class="portfolio-title">Inspiration has no Borders</h3>
-                <p class="portfolio-content">Веб-сайт</p>
-              </div>
+              <a href="" class="portfolio-card-link">
+                <img
+                  src="img/img26.jpg"
+                  alt="Зображення екрану монітора"
+                  width="370"
+                />
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Inspiration has no Borders</h3>
+                  <p class="portfolio-content">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-card">
-              <img src="img/img27.jpg" alt="Розгорнута книга" width="370" />
-              <div class="portfolio-text">
-                <h3 class="portfolio-title">Видання Limited Edition</h3>
-                <p class="portfolio-content">Дизайн</p>
-              </div>
+              <a href="" class="portfolio-card-link">
+                <img src="img/img27.jpg" alt="Розгорнута книга" width="370" />
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Видання Limited Edition</h3>
+                  <p class="portfolio-content">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-card">
-              <img src="img/img28.jpg" alt="Ярлик" width="370" />
-              <div class="portfolio-text">
-                <h3 class="portfolio-title">Проєкт LAB</h3>
-                <p class="portfolio-content">Маркетинг</p>
-              </div>
+              <a href="" class="portfolio-card-link">
+                <img src="img/img28.jpg" alt="Ярлик" width="370" />
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Проєкт LAB</h3>
+                  <p class="portfolio-content">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-card">
-              <img src="img/img29.jpg" alt="Працюючий ноутбук" width="370" />
-              <div class="portfolio-text">
-                <h3 class="portfolio-title">Growing Business</h3>
-                <p class="portfolio-content">Додаток</p>
-              </div>
+              <a href="" class="portfolio-card-link">
+                <img src="img/img29.jpg" alt="Працюючий ноутбук" width="370" />
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Growing Business</h3>
+                  <p class="portfolio-content">Додаток</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
